# broadview-ui

./: .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  _50_broadview.py  setup.cfg  tox.ini
broadview/: common.py  dashboard.py  switches.py
broadview/config/: broadviewswitches.conf
broadview/featurepanel/: forms.py  panel.py  urls.py  views.py
broadview/featurepanel/templates/featurepanel/: form.html
broadview/static/broadview/js/: broadview.js
broadview/templates/broadview/: base.html
broadview/thresholdspanel/: forms.py  panel.py  urls.py  views.py
broadview/thresholdspanel/templates/thresholdspanel/: form.html
broadview/trackingpanel/: forms.py  panel.py  tests.py  urls.py  views.py
broadview/trackingpanel/templates/trackingpanel/: form.html
doc/source/: conf.py  index.rst  installation.rst  usage.rst
